<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/purple_500"
        android:paddingHorizontal="34dp"
        android:paddingVertical="14dp"
        android:text="@string/scanBtn"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/pairedDevicesListView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="877dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Devices Found"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/pairedDevicesListView"
        app:layout_constraintTop_toBottomOf="@+id/pairedDevicesListView" />

    <ListView
        android:id="@+id/otherDevicesListView"
        android:layout_width="0dp"
        android:layout_height="285dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/chatlog"
        android:listSelector="@color/dark_grey"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/connectBtn"
        app:layout_constraintEnd_toEndOf="@+id/pairedDevicesListView"
        app:layout_constraintStart_toStartOf="@+id/pairedDevicesListView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"></ListView>

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/purple_500"
        android:paddingHorizontal="34dp"
        android:paddingVertical="14dp"
        android:text="@string/connectBtn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/pairedDevicesListView"
        app:layout_constraintTop_toBottomOf="@+id/otherDevicesListView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Paired Devices"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/pairedDevicesListView"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_status" />

    <ListView
        android:id="@+id/pairedDevicesListView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/chatlog"
        android:listSelector="@color/dark_grey"
        android:padding="10dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/SC2079"
        android:layout_width="324dp"
        android:layout_height="23dp"
        android:text="@string/course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pairedDevicesListView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Autismobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="31dp"
        android:text="@string/autismobile"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_static"
        app:layout_constraintStart_toStartOf="@+id/pairedDevicesListView"
        app:layout_constraintTop_toTopOf="@+id/SC2079" />

    <TextView
        android:id="@+id/bluetooth_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Bluetooth Status"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_status"
        app:layout_constraintStart_toStartOf="@+id/pairedDevicesListView" />

    <TextView
        android:id="@+id/bluetooth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Connected"
        android:textColor="#82D8B3"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pairedDevicesListView"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_static" />

    <Switch
        android:id="@+id/bluetoothSwitch"
        android:layout_width="93dp"
        android:layout_height="50dp"
        android:buttonTint="#404252"
        android:text="On"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:thumbTint="#404252"
        app:layout_constraintBottom_toTopOf="@+id/scanButton"
        app:layout_constraintEnd_toEndOf="@+id/scanButton" />


</androidx.constraintlayout.widget.ConstraintLayout>